# ChangeLog for dev-python/geopy
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/geopy/ChangeLog,v 1.24 2015/03/08 23:49:01 pacho Exp $

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> geopy-1.8.1.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> geopy-1.8.1.ebuild:
  amd64 stable, bug 540290

*geopy-1.9.1 (05 Mar 2015)

  05 Mar 2015; Ian Delaney <idella4@gentoo.org> +geopy-1.9.1.ebuild,
  -geopy-1.7.1.ebuild, metadata.xml:
  bump, add use flag timezone, rm one old

*geopy-1.8.1 (07 Feb 2015)

  07 Feb 2015; Ian Delaney <idella4@gentoo.org> +geopy-1.8.1.ebuild,
  -geopy-1.6.1.ebuild:
  bump, rm old

*geopy-1.7.1 (12 Jan 2015)

  12 Jan 2015; Ian Delaney <idella4@gentoo.org> +geopy-1.7.1.ebuild,
  -geopy-1.7.0.ebuild:
  bump, rm 1.7.0

*geopy-1.7.0 (07 Jan 2015)

  07 Jan 2015; Ian Delaney <idella4@gentoo.org> +geopy-1.7.0.ebuild:
  bump

*geopy-1.6.1 (24 Dec 2014)

  24 Dec 2014; Ian Delaney <idella4@gentoo.org> +geopy-1.6.1.ebuild:
  bump; update test phase, rm disused patches & rm old versions

*geopy-1.4.0 (17 Nov 2014)

  17 Nov 2014; Ian Delaney <idella4@gentoo.org> +geopy-1.4.0.ebuild,
  -geopy-0.99.ebuild, -geopy-1.1.3.ebuild, -geopy-1.1.5.ebuild,
  -geopy-1.3.0.ebuild:
  bump, rm old

*geopy-1.3.0-r1 (04 Oct 2014)

  04 Oct 2014; Ian Delaney <idella4@gentoo.org> +geopy-1.3.0-r1.ebuild:
  revbump; purge test folder from installed folders to avoid file collisions,
  fixes Bug #524348 by H. Jarausch

*geopy-1.3.0 (02 Oct 2014)

  02 Oct 2014; Ian Delaney <idella4@gentoo.org> +geopy-1.3.0.ebuild,
  geopy-1.1.5.ebuild:
  bump; add IUSE doc, doc deps and doc build, refine test phase

*geopy-1.1.5 (19 Sep 2014)

  19 Sep 2014; Ian Delaney <idella4@gentoo.org> +geopy-1.1.5.ebuild:
  bump; update dep list, drop un-needed patches now incorporated into this
  version

  08 Sep 2014; Ian Delaney <idella4@gentoo.org>