@@ -4,16 +4,18 @@ Hash: SHA256
 AUX 1.1.3-formatpy3.patch 431 SHA256 00d123bbc449407497c3938fecfdb2ff7823890af98fad57337bb6553fb3e62e SHA512 35a81289a3aae10e1b3a7c046e332e655e630b386f25e123ee9404594be506c87e7ffa74554f0940afeacf79be00d4185efaabf13cf937e3b51170757d632fca WHIRLPOOL 76af337d581879b5296a701dce580cc2930218500bb449c07a278034e22348d613e9982f83bce6a6b753b3fafcb311ebf97ad13ab26f226ed065242a25b0529d
 AUX 1.1.3-tests-env-vars.patch 6759 SHA256 eed4a22e48a3f95e0836312a308ca422fdbf09ccaeb6d7b531044a952322822f SHA512 25fcc3e1d6d5b4456418c0412f2aa67cd4f825ccd6f8c472b2cd3e117ca3950cdbdedd0f8ba549d4036d5533e83fecb5c6e86c374ed9102f921dbad90a688452 WHIRLPOOL c805bc80af3a4a850e2561a64461ca74f4ac28ac505fd75bdc73d24b8d9594be7554679058ad30549e8603372c5b99abbf3d76a97fbeadd9a50ad3222bd6d328
 AUX 1.1.3-version-compat.patch 472 SHA256 37451bd41b5e27a6c3fcbdb28d1910fd74b7f76594f9ea9bca1b1768dc0eb791 SHA512 f290331cf80e0eb9a97d875a2d2579bcd4cc251e89324608dd06073f3c23de522e7501f34587a4c49c2b5a6315300c72f2f0191b0a1a82b1f2eb00d7a51a4595 WHIRLPOOL c70c5abce91cb51deec4a4652cee7b4dd442b76b5aaca8a665df75792e99e459830eb241bd6d0dd52062445ebedf520262c341a33d30a85e86b788d8dac4ed3d
+DIST geopy-1.10.0.tar.gz 69671 SHA256 d1445731b20762b4e1d13e98d6370ff39a58fb29bd526afe1a44d510e91ee815 SHA512 943eb188090597786d5df9d1dac652dda81dd85d8edc57d9ffd4197b8a9a89c54a01ae4d6263eae64f69dc8437234a1ca797e869856d978c367b8db4c2c82f54 WHIRLPOOL f996abff6aaab85b98267d39c9284cb45e0d5d636e8df14baa8bae8b67c97ca8472076fac5f30fae0f19a7a390ae6247afcac3afc91d14197f51d44249ce6eb2
 DIST geopy-1.8.1.tar.gz 67542 SHA256 63b805535cbe178367ee8f5e0221fab9fa691eef5797decac1e0851d16173dcf SHA512 0df2e67ed35d5cc3f796e3188df3a37d8fa101a4b6feb6b760ea08087ba44c350765a8c1032012b5e762454fa15c520f97d59ff942f07047927ef4872232a57c WHIRLPOOL 44c3f68a26ba23ca3ffae52dba5dc575a1cf54a53ea1e39d9566d97c58bcdb26b98934befc7cf012adbd266cee8a10b72d6880d1765af7f23486292b249c91a2
 DIST geopy-1.9.1.tar.gz 67158 SHA256 e95989f5baf2cc5c2cee6186355f24b3fa8ce01faabea4e2bfcb083109416462 SHA512 ad6281626a03778754bec2e776419327609b3e6e47d6641520787ed2af87106fb2842a89667da680317a6c745970ac23b66c9b0fe8e50a2d223fc3169fe013b9 WHIRLPOOL e0f6fef1a061ff2d88e6ea1a37786405b1b0cac7d0982cb7bd650582b10726a6fa682c9c6577be6cec1d90b52d3f4828d221ac07d4aff6b04b93ff95f2c69110
+EBUILD geopy-1.10.0.ebuild 2222 SHA256 b71697a345620def894f4ee95ccb7e737c2e18eddcf899e197ce561ad8462ecb SHA512 e718089ceebb41334ef100ea653e30cae045c70f8a7d0f6f4ee33167e5a305865af6e7b8a08567fb2580f4341cd653a944bd8bf1a6e0fc022b052024cd9455d2 WHIRLPOOL c91a8e983311432f6c693543fe6c32bd0ff28f5f0227bea42c2fdc547a7e7a1895c8a30bb91501572f88ec375bc528048bc228a46ed83a44a52234a902f6829a
 EBUILD geopy-1.8.1.ebuild 2118 SHA256 bff23d9b0ca99db65695eee296a42b597260f15af94a2e5a84674350652f3543 SHA512 ca9eae7bd7144ac9b4ebfa03c1b8d96e17518daa475ec5d97f112d0f2de2fabfb23167bb9dc7f21cff3e84a50001fa6874ac641d413d485161922944bd6b1246 WHIRLPOOL 80ff23dc5d429062593ebfa2d78f9f4e828e2a1ed090ae882178be258636d647110d261dbf69367503ece0fb993253a6efea7733c9080812f0e1cad20b1aae17
 EBUILD geopy-1.9.1.ebuild 2221 SHA256 77b151b99189fa5c742c1effba68509aeaf7afe081cf6dfdb673ab086218fc27 SHA512 05b179ff1daed8694c78b8b1b3e44ffb4d9c4539c2f9a6741ad2dbd6b9bdd6820656e92a2fa8d931f70ef94d69ca1e7f8e418abba3a15a68d69496752dd27411 WHIRLPOOL 897cffd2dfee5d4f3b5ca237df952fa67dd87ad7e7bb98d4ba04a7a107340455dd44c9be37bbaa8c15c11ca970a5a7073a657025fcf28ab439fb4daff8127a68
-MISC ChangeLog 3832 SHA256 7fb1e11e35e41c0f1d77fa922e1083e6212b577a31fe4b4d0d71df9a8fc50699 SHA512 75305d2d73c86e70ac87d0f65c101ebfaf550c83a251d84241e2c2a59a7af63ad204386a9aeba7b4b172488d01ac1417a65c2b1f506bb50bf4a7543867502d26 WHIRLPOOL 1b499372bb09121c6cee6ba59cf43c661280bed774a623cd6cd7fc5fec244ae09f3c75750541f3289496475dc14b2bea5b30890547f65c042048f7598480aff2
+MISC ChangeLog 3941 SHA256 d725779da1933d77f6bc239624d95740dfc8d1b9ae2fcfdfc328972de56e9af4 SHA512 0cb1195fcfd2ba17aba9c01ec9be61749f8804554decb00e4846839108a9edef81bb1f16adb917476c63212d0edc6690c75004499c6e2268d78f1aaeec53e246 WHIRLPOOL 2afe0cb5bb659c07334e955b383f8fa9b6d7e3ae0d29f7fa215eb0d715a225e53f7d9fdbf4d68ad46387271bff8d253332d03a443cf5ad7c187420aed59b76d8
 MISC metadata.xml 415 SHA256 4b2ad04bf52b544586e2610db81428142b1ebc3fa85ac0c23ad0a17307e53f7d SHA512 ecf252249dedc94277e63589db7369b9e1a1d4f27529851ab1e19bdb5576fbe0c15c6362b3eef5136dbc9073b6000c465f7b91a2bfc90b8d79e4ba1014916548 WHIRLPOOL f6f05dbcc21780e80f6b87a0000ef0ea2562586fc1139c5840601fcf30abaa9f61d7f7337ad3fbc94805922e29ee58ddcd4a70ce89a78eaf352549ee8ec0f741
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT83+oACgkQCaWpQKGI+9Se1gCfY3wYK4VMurwezNvDUinL2aOy
-KwYAnRfD+KKWCKH3wkBaOif65PZVrkSJ
-=2duv
+iEYEAREIAAYFAlUowRAACgkQso7CE7gHKw31ywCgwnysFacM/Z6Rb/L7HuShXEIH
+RNAAoM/zJXm7Y3G8vSzgsxSK+AP8pImu
+=325j
 -----END PGP SIGNATURE-----
