@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/geopy
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/geopy/ChangeLog,v 1.24 2015/03/08 23:49:01 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/geopy/ChangeLog,v 1.25 2015/04/11 06:36:48 idella4 Exp $
+
+*geopy-1.10.0 (11 Apr 2015)
+
+  11 Apr 2015; Ian Delaney <idella4@gentoo.org> +geopy-1.10.0.ebuild:
+  bump
 
   08 Mar 2015; Pacho Ramos <pacho@gentoo.org> geopy-1.8.1.ebuild:
   x86 stable, bug 540290
